--- a/index.html
+++ b/index.html
@@ -166,8 +166,61 @@
     </div>
 
 
-    <div>
-        
+    <div class="rent-container">
+        <div class="rent-title">
+          <span>Rent/Lease In three easy steps</span>
+        </div>
+        <div class="rent-flex">
+
+       
+        <div class="rent-details">
+          <div class="rent-order">
+            <img src="icons/Group 1171275035.svg" alt="">
+          </div>
+          <div class="rent-order-details">
+            <img src="icons/Frame 1171274971.svg" alt="">
+            <br>
+            <br>
+            <br>
+            <br>
+            <span class="rent-span">Select the location. Browse through our 
+              available options and find the perfect car to suit your needs</span>
+          </div>
+        </div>
+
+        <div class="rent-details">
+          <div class="rent-order">
+            <img src="icons/Group 1171275036.svg" alt="">
+          </div>
+          <div class="rent-order-details">
+            <img src="icons/Frame 1171274970.svg" alt="">
+            <br>
+            <br>
+            <br>
+            <br>
+            <span class="rent-span">Choose your desired Pick-Up date and time.</span>
+          </div>
+        </div>
+
+        <div class="rent-details">
+          <div class="rent-order">
+            <img src="icons/Group 1171275037.svg" alt="">
+          </div>
+          <div class="rent-order-details">
+            <img src="icons/Frame 1171274969.svg" alt="">
+            <br>
+            <br>
+            <br>
+            <br>
+            <span class="rent-span">Make payment and book the car.
+               Select an option to either have the car delivered to your 
+               location or pick it up directly from us.</span>
+          </div>
+        </div>
+      </div>
     </div>
+
+
+    <!-- locations -->
   </body>
 </html>
