--- a/index.html
+++ b/index.html
@@ -222,5 +222,18 @@
 
 
     <!-- locations -->
+
+    <div class="location-container">
+      <div class="location-title">
+        <span>Locations</span>
+      </div>
+      <div class="location-icons">
+        <img src="icons/Component 11.svg" alt="">
+        <img src="icons/Component 12.svg" alt="">
+        <img src="icons/Component 13.svg" alt="">
+        <img src="icons/Component 14.svg" alt="">
+        <img src="icons/Component 15.svg" alt="">
+      </div>
+    </div>
   </body>
 </html>
